<resources>
    <string name="app_name">queueApp</string>
    <string name="shared_preferences">ru.bmstu.queueapp.shared_pref_file</string>
    <string name="login_hint">логин</string>
    <string name="password_hint">пароль</string>
    <string name="refresh_button">обновить</string>
    <string name="account_button">профиль</string>
    <string name="login_button">вход</string>
    <string name="complete_button">завершить</string>
    <string name="close_button">закрыть</string>
    <string name="cancel_appointment">отменить</string>
    <string name="create_appointment">записаться</string>
    <string name="account_appointments_button">мои записи</string>
    <string name="account_appointments_list">Мои записи</string>
    <string name="account_schedules_button">мои расписания</string>
    <string name="account_schedules_list">Расписания</string>
    <string name="account_repeated_schedules_list">Повторяемые расписания</string>
    <string name="account_repeated_schedules_button">мои повторяемые расписания</string>
    <string name="schedule_view_caption">Расписание</string>
    <string name="repeated_schedule_view_caption">Повторяемое расписание</string>
    <string name="schedule_view_date_hint">Дата приёма</string>
    <string name="repeated_schedule_view_date_hint">Дата первого приёма</string>
    <string name="repeated_schedule_view_period_hint">Интервал повтора (дни)</string>
    <string name="schedule_view_duration_hint">Продолжительность одного приёма</string>
    <string name="schedule_view_place_hint">Место приёма</string>
    <string name="add_appointment_interval_button">добавить время приёма</string>
    <string name="create_schedule_button">создать</string>
    <string name="update_schedule_button">обновить</string>
    <string name="delete_schedule_button">удалить</string>
    <string name="appointment_interval_popup_caption">Время приёма</string>
    <string name="appointment_interval_popup_create_button">Добавить</string>
    <string name="appointment_interval_popup_update_button">Обновить</string>
    <string name="appointment_interval_popup_remove_button">Удалить</string>
    <string name="appointment_interval_popup_start">Начало</string>
    <string name="appointment_interval_popup_end">Конец</string>
    <string name="logout_button">выход</string>
</resources>
