<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountActivity">

    <TextView
        android:id="@+id/profileNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ActivityTitle"
        android:text="TextView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/accountAppointmentsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accountAppointmentsButtonHandler"
            android:text="@string/account_appointments_button" />

        <Button
            android:id="@+id/accountSchedulesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accountSchedulesButtonHandler"
            android:text="@string/account_schedules_button" />

        <Button
            android:id="@+id/accountRepeatedSchedulesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="accountRepeatedSchedulesButtonHandler"
            android:text="@string/account_repeated_schedules_button" />
    </LinearLayout>

    <Button
        android:id="@+id/accountLogoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logoutButtonHandler"
        android:text="@string/logout_button" />

</LinearLayout>